TestSuite/errors/err0416.pas
type
  T = class
    public procedure p(self: integer) := exit;
  end;

begin
end.